2004-08-27  Dan Winship  <danw@novell.com>

	* addressbook/e-book-backend-gal.c: More un-debug-spewing

2004-08-26  Dan Winship  <danw@novell.com>

	* addressbook/e-book-backend-exchange.c (d): Turn off debug macro

	* addressbook/e-book-backend-gal.c (d): Likewise

2004-08-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (send_objects): Modified 
	the code to now send the proper attendee list. Also, removed some 
	unwanted code.

2004-08-25  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2004-08-24  Rodney Dawes  <dobey@novell.com>

	* configure.in: Fix GETTEXT_PACKAGE to include -${BASE_VERSION} again
	Was accidentally removed on 2004-06-01 with "no" addition
	
2004-08-23  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2004-08-23  Jayaradha  <njaya@redhat.com>

	* configure.on: Added 'ta' Tamil to ALL_LINGUAS

2004-08-23  Sushma Rai  <rsushma@novell.com>

	* shell/e-storage-set-view.c (init): Disabling dnd.
	See #62442

2004-08-23  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS.

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-20  Dan Winship  <danw@novell.com>

	* addressbook/e-book-backend-gal.c: Pull up various fixes from
	e-book-backend-ldap.c

2004-08-19  Dan Winship  <danw@novell.com>

	* lib/e2k-autoconfig.c (e2k_autoconfig_get_context): Make the "is
	this really an Exchange server" checks more lenient; the current
	code fails against E2k SP2 (which people shouldn't be running any
	more, but...)
	(e2k_autoconfig_check_exchange): Try the "append /exchange if the
	path was empty" trick for E2K_AUTOCONFIG_FAILED too.

2004-08-18  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in: Added uk to ALL_LINGUAS

2004-08-19  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c 